lumen: fix input and btn alignment

--- a/lumen/_bootswatch.scss
+++ b/lumen/_bootswatch.scss
@@ -22,6 +22,7 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400
   @include shadow();
   font-size: 12px;
   font-weight: bold;
+  line-height: 1.5;
   text-transform: uppercase;
 
   &:hover {
