--- a/lumen/bootstrap.css
+++ b/lumen/bootstrap.css
@@ -2,7 +2,7 @@
 /*!
  * bootswatch v3.3.7
  * Homepage: http://bootswatch.com
- * Copyright 2012-2016 Thomas Park
+ * Copyright 2012-2017 Thomas Park
  * Licensed under MIT
  * Based on Bootstrap
 */
@@ -6763,6 +6763,7 @@ button.close {
   border-width: 0 1px 4px 1px;
   font-size: 12px;
   font-weight: bold;
+  line-height: 1.5;
   text-transform: uppercase;
 }
 .btn:hover {
