--- a/lumen/bootswatch.less
+++ b/lumen/bootswatch.less
@@ -26,6 +26,7 @@
   .shadow();
   font-size: 12px;
   font-weight: bold;
+  line-height: 1.5;
   text-transform: uppercase;
 
   &:hover {
